--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
   grid-gap: 10px;
 }
 
-.warni {
+.warning {
   text-align: center;
 }
 
@@ -87,12 +87,57 @@ body {
 }
 
 .infotextWelcome {
-  color: #ECECEC;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 30px;
-  text-align: left;
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
   padding-left: 20px;
+  color: #ECECEC;
+  font-family: 'Montserrat', monospace;
+  font-size: 35px;
+  grid-column: 1;
+  position: relative;
 }
+.centering {
+  padding-left: 5px;
+  display: flex;
+  text-align: center;
+}
+
+.infotextWelcome::before,
+.infotextWelcome::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+.infotextWelcome::before {
+  background: #161616;
+  animation: typer 3s steps(35) forwards;
+}
+
+.infotextWelcome::after {
+  width: 0.125em;
+  height: 35px;
+  background: white;
+  animation: 
+    typer 3s steps(35) forwards,
+    blinker 750ms steps(31) infinite;
+}
+
+@keyframes typer{
+  to {
+    left: 100%;
+  }
+}
+
+@keyframes blinker {
+  to {
+    background: transparent;
+  }
+}
+
 
 .infotextdark {
   color: #161616;
@@ -135,14 +180,14 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-image: linear-gradient(#ffffff, #585858);
+  background-color: #a7a7a7;
   border-radius: 50px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-image:linear-gradient(#dadada, #000000);
+  background-image:linear-gradient(#838383, #353535);
 }
 
 ::-webkit-scrollbar-thumb:active {
-  background-image:linear-gradient(#929292, #000000);
+  background-image:linear-gradient(#353535, #353535);
   border-radius: 3px;
 }
