--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
+
+
 .navbar {
   background-color: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(15px);
@@ -9,7 +12,7 @@
   position: sticky;
   top: 0;
   z-index: 999; 
-  box-shadow: 0px -7px 10px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px -7px 10px 2px rgba(0, 0, 0, 0.4);
 }
 
 .inHeader {
@@ -153,9 +156,6 @@
   transition: all ease-in-out 250ms;
 }
 
-Nav.Link {
-  display: block;
-}
 
 .boxcolor {
   border-radius: 10px;
@@ -163,7 +163,8 @@ Nav.Link {
   margin: 5px;
 }
 .boxcolor span {
-  padding: 10px;
+  padding-left: 5px;
+  padding-top: 5px;
   font-family: "Montserrat", sans-serif;
   font-size: 20px;
   color: rgb(29, 29, 29);
@@ -179,12 +180,19 @@ Nav.Link {
   color: #fff;
 }
 
-.logoShadow {
-  border-radius: 50px;
-  background: transparent;
-  transition: all ease-in-out 250ms;
-}
-.logoShadow:hover {
-  box-shadow: 0px 1px 20px 2px rgba(184, 28, 0, 0.5);
+.boxcolor:hover img {
+  filter: invert(1);
 }
 
+.logoShadow {
+  border-radius: 50px;
+  background: black;
+  transition: all ease-in-out 200ms;
+}
+.logoShadow:hover {
+  box-shadow: 0px 1px 20px 2px rgba(200, 30, 0, 0.5);
+}
+
+.invertedSvgHeader:hover {
+  filter: invert(1);
+}
