--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
+  overflow: overlay;
 }
 
 
@@ -37,7 +38,17 @@ body {
   
 }
 
+.Link {
+  background-color: #2c2a29;
+  padding: 3px;
+  border-radius: 5px;
+  color: #ECECEC;
+  font-family: 'Roboto Mono', monospace;
+}
 
+.Link:hover {
+  color: rgb(129, 129, 129);
+}
 
 .main {
   border-radius: 20px;
@@ -156,14 +167,20 @@ body {
 
 .works {
   grid-row: 5;
-  grid-column-start: 1;
-  grid-column-end: 6;
-  padding-top: 10px;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 40px;
-  text-align: center;
+  grid-column-start: 2;
+  grid-column-end: 5;
   
 }
+
+.works h1{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  font-size: 45px;
+  text-align: center;
+}
+
 .works1 {
   grid-row: 6;
   grid-column-start: 1;
@@ -175,11 +192,16 @@ body {
   
 }
 
+
+/* ScrollBar Settings */
+
+
 ::-webkit-scrollbar {
   width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
+  
   background-color: #a7a7a7;
   border-radius: 50px;
 }
