--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -158,7 +158,7 @@
 
 
 .boxcolor {
-  border-radius: 10px;
+  border-radius: 5px;
   transition: all ease-in-out 270ms;
   margin: 5px;
 }
@@ -172,8 +172,8 @@
   
 }
 .boxcolor:hover {
-  background-color: rgba(0, 0, 0, 0.822);
-  border-radius: 15px;
+  background-color: rgb(53, 53, 53);
+  border-radius: 0px;
 }
 
 .boxcolor:hover span {
