--- a/src/Components/Photos.css
+++ b/src/Components/Photos.css
@@ -1,31 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 
-.codespan {
+.photospan {
     font-family: 'Montserrat', sans-serif;
     color: rgb(0, 0, 0);
     font-size: 55px;
     text-align: center;
-    animation: AppearOnOpenCode 1s;
+    animation: AppearOnOpenPhoto 1s;
 }
 
-.codep {
+.photop {
     font-family: 'Montserrat', sans-serif;
     color:rgb(32, 32, 32);
     text-align: center;
-    animation: AppearOnOpenCodeText 2.5s;
+    animation: AppearOnOpenPhotoText 2.5s;
 }
 
-@keyframes AppearOnOpenCode {
+@keyframes AppearOnOpenPhoto {
     from  {
-        margin-right: 10%;
+        margin-left: 10%;
     }
     to {
-        margin-right: 0%;
+        margin-left: 0%;
     }
 }
 
-@keyframes AppearOnOpenCodeText {
+@keyframes AppearOnOpenPhotoText {
     from {
         opacity: 0;
     }
