--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -12,7 +12,8 @@
   position: sticky;
   top: 0;
   z-index: 999; 
-  box-shadow: 0px -7px 10px 2px rgba(0, 0, 0, 0.4);
+  border-bottom: 1px solid rgb(236, 236, 236);
+  /* box-shadow: 0px -7px 10px 2px rgba(0, 0, 0, 0.4); */
 }
 
 .inHeader {
