--- a/src/Components/socials.css
+++ b/src/Components/socials.css
@@ -12,10 +12,21 @@
     height: 200px;
     width: 45vw;
     margin-left: 28%;
-    background: #e9e9e9;
-    box-shadow: 0px 0px 35px 5px rgba(0,0,0,0.15);
+    background: #e7e7e7;
+    box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.15);
+    animation: AppearOnOpen 0.5s;
 
 }
+
+@keyframes AppearOnOpen {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 
 .sCircle {
     width: 20vw;
@@ -60,7 +71,9 @@
 }
 
 .sh1 {
-    margin: 70px;
+    margin-top: 30px;
+    margin-bottom: 70px;
+    font-weight: bold;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size: 50px;
