--- a/src/Components/DownloadCard.css
+++ b/src/Components/DownloadCard.css
@@ -3,14 +3,37 @@
 
 
 .downloadCard {
+    margin: auto;
+    margin-bottom: 45px;
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 50% 50%;
-    height: 300px;
-    width: 400px;
+    grid-template-columns: 40% 60%;
+    grid-template-rows: 70% 30%;
+    height: 14rem;
+    width: 20rem;
     border-radius: 35px;
     border: 1px solid rgb(211, 211, 211);
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+    transition: ease-out 0.3s;
+    animation: bottomTransition 0.5s, opacity 0.5s;
+}
+
+@keyframes bottomTransition {
+    from {
+        transform: translateY(150%);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+
+@keyframes opacity {
+    from{
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+    
 }
 
 .fileName {
@@ -48,10 +71,17 @@
     grid-column: 2;
     grid-row: 2;
     background-color: rgb(0, 0, 0);
-    border-radius: 5px 0px 35px 5px;
+    border-radius: 0px 0px 35px 0px;
 }
 
 .downloadButton {
     display: flex;
     align-items: center;
+    box-shadow: inset 0 0 0 0 rgb(197, 122, 52);
+    transition: ease-out 0.3s;
+    
+}
+
+.downloadButton:hover {
+    box-shadow: inset 12rem 0 0 0 rgb(197, 122, 52);
 }
