--- a/src/Components/Warning.css
+++ b/src/Components/Warning.css
@@ -5,7 +5,6 @@
     font-family: 'Montserrat', sans-serif;
     background-color: #fffb009b;
     border-radius: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 2px 15px 2px 15px;
 }
 
