--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,7 @@ body {
   height: 100vh;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 10px 250px 150px 150px;
+  grid-template: 10px 250px 150px 150px / 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 10px;
 }
 
@@ -54,16 +53,16 @@ body {
 }
 
 .main {
-  border-radius: 20px;
   height: 300px;
   background: #161616;
   box-shadow: 0px 2px 40px -10px rgba(0,0,0,0.5);
+  border-radius: 20px;
   grid-row: 3;
   grid-column-start: 2;
   grid-column-end: 5;
   display: grid;
-  grid-template-columns: 7fr 1fr;
-  grid-template-rows: px 250px;
+  grid-template: 100px 250px / 7fr 1fr;
+
 }
 
 .mainPhoto {
@@ -77,40 +76,24 @@ body {
 }
 
 
-.info {
-  height: 55vh;
-  background-blend-mode: multiply;
-  background-color: #484747;
-  border: 2px solid #1f1f1f;
-  border-right: 2px solid #131e29;
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  color: #000;
-}
-
 .infotext {
   padding-left: 20px;
   color: #ECECEC;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 17px;
+  font: 17px 'Montserrat', sans-serif;
   text-align: left;
   grid-column: 1;
 }
 
 .infotextWelcome {
   margin-top: 5px;
-  display: flex;
   justify-content: center;
   padding-left: 20px;
   color: #ECECEC;
-  font-family: 'Montserrat', monospace;
-  font-size: 35px;
+  font: 600 35px 'Montserrat', monospace;
   grid-column: 1;
   position: relative;
 }
+
 .centering {
   padding-left: 5px;
   display: flex;
@@ -178,9 +161,7 @@ body {
 .works h1{
   padding-top: 10px;
   padding-bottom: 10px;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: bold;
-  font-size: 45px;
+  font: bold 35px 'Montserrat', sans-serif;
   text-align: center;
 }
 
@@ -189,8 +170,7 @@ body {
   grid-column-start: 1;
   grid-column-end: 6;
   padding-top: 10px;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 40px;
+  font: 40px 'Montserrat', sans-serif;
   text-align: center;
   
 }
