--- a/src/Components/socials.css
+++ b/src/Components/socials.css
@@ -8,11 +8,10 @@
     align-items: center;
     padding: 10px;
     padding-left: 1.5vw;
-    border-radius: 5px;
+    border-radius: 15px;
     margin-left: 28%;
-    background: #e7e7e7;
-    box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.15);
     animation: AppearOnOpen 0.5s;
+    border: 1px solid rgba(0, 0, 0, 0.445);
 
 }
 
@@ -27,6 +26,7 @@
 
 
 .sCircle {
+    align-items: center;
     width: 20vw;
     color: rgb(32, 32, 32);
     display: grid;
@@ -34,7 +34,7 @@
     grid-gap: 5px;
     text-align: center;
     font: 17px 'Montserrat', sans-serif;
-    background:#ececec;
+    background:#f1f1f1;
     border-radius: 50px;
     padding: 7px;
     box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.1);
@@ -52,10 +52,8 @@
 
 .instagram:hover {
     color:rgb(255, 30, 0);
-    background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
 }
+
 .github:hover {
     color: black;
     box-shadow: 0px 10px 10px -10px rgb(0, 0, 0); 
