--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -26,11 +26,11 @@
   transition: all ease-in-out 250ms;
 }
 
-
 .boxcolor {
-  border-radius: 5px;
-  transition: all ease-in-out 270ms;
+  border-radius: 2px;
   margin: 5px;
+  border: 1px solid rgba(255, 255, 255, 0);
+  transition: all ease-in-out 270ms;
 }
 .boxcolor span {
   padding-left: 5px;
@@ -42,17 +42,10 @@
   
 }
 .boxcolor:hover {
-  background-color: rgb(53, 53, 53);
-  border-radius: 0px;
+  border-radius: 7px;
+  border: 1px solid rgb(63, 63, 63);
 }
 
-.boxcolor:hover span {
-  color: #fff;
-}
-
-.boxcolor:hover img {
-  filter: invert(1);
-}
 
 .logoShadow {
   border-radius: 50px;
